--- a/react/src/styles/index.css
+++ b/react/src/styles/index.css
@@ -38,7 +38,11 @@ body {
 }
 
 .glow-orange {
-  filter: drop-shadow(0 0 1px rgb(16, 179, 255));
+  filter: drop-shadow(0 0 1px rgb(255, 191, 16));
+}
+
+.glow-xy-box {
+  box-shadow: 0px 0px 9px #006eff;
 }
 
 ::selection {
